test task complete

--- a/DateTimeIntervalsServer/DateTimeIntervalsServer/appsettings.json
+++ b/DateTimeIntervalsServer/DateTimeIntervalsServer/appsettings.json
@@ -9,6 +9,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=TERMINATOR\\SQLEXPRESS;Initial Catalog=DateTimeIntervals;Integrated Security=True"
+    "DefaultConnection": "Data Source=TERMINATOR\\SQLEXPRESS;Initial Catalog=DateTimeIntervals;Integrated Security=True",
+    "LoggerConnection": "Data Source=TERMINATOR\\SQLEXPRESS;Initial Catalog=DateTimeIntervalsServerLogs;Integrated Security=True"
   }
 }
